<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SudokuGameActivity">

    <com.example.sudokuscanner.BoardView
        android:id="@+id/sudokuBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        custom:digitColor="#000000"
        custom:highlightDigitColor="#CECECE"
        custom:highlightCellsColor="#E6E6E6"

        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:lineColor="#000000"
        android:elevation="15dp"/>

    <LinearLayout
        android:id="@+id/bottomDigitsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sixBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:elevation="3dp"
            android:layout_weight="1"
            android:onClick="sixBtnPressed"
            android:text="@string/six"
            android:textColor="@color/black"
            android:background="@drawable/button_border"
            android:textSize="24sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sevenBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:elevation="3dp"
            android:layout_weight="1"
            android:onClick="sevenBtnPressed"
            android:text="@string/seven"
            android:textColor="@color/black"
            android:background="@drawable/button_border"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/eightBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:elevation="3dp"
            android:layout_weight="1"
            android:onClick="eightBtnPressed"
            android:text="@string/eight"
            android:textColor="@color/black"
            android:background="@drawable/button_border"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nineBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:elevation="3dp"
            android:layout_weight="1"
            android:onClick="nineBtnPressed"
            android:text="@string/nine"
            android:textColor="@color/black"
            android:background="@drawable/button_border"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:elevation="3dp"
            android:layout_weight="1"
            android:onClick="delBtnPressed"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:background="@drawable/button_border"
            android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/topDigitsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        custom:layout_constraintBottom_toTopOf="@+id/bottomDigitsLayout"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/oneBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:elevation="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="oneBtnPressed"
            android:text="@string/one"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/twoBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:elevation="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="twoBtnPressed"
            android:text="@string/two"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/threeBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:elevation="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="threeBtnPressed"
            android:text="@string/three"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fourBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:elevation="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="fourBtnPressed"
            android:text="@string/four"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fiveBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:elevation="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="fiveBtnPressed"
            android:text="@string/five"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hintSolveLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        custom:layout_constraintBottom_toTopOf="@+id/topDigitsLayout"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/sudokuBoard">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/hintBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp"
            android:elevation="5dp"
            android:layout_weight="1"
            android:background="@drawable/solve_button"
            android:onClick="solveBtnPressed"
            android:text="@string/solve"
            android:textColor="@color/black" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/solveBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp"
            android:elevation="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="hintBtnPressed"
            android:text="@string/hint"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        custom:layout_constraintBottom_toTopOf="@+id/sudokuBoard"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menuBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:elevation="3dp"
            android:onClick="menuBtnPressed"
            android:text="@string/menu"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="141dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            custom:srcCompat="@drawable/logo" />

        <Chronometer
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:elevation="3dp"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>