<?xml version = "1.0" encoding = "utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="247dp"
        android:layout_height="183dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintWidth_percent="0.60"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/useCamBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableRight="@android:drawable/ic_menu_camera"
            android:padding="40dp"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_border"
            android:elevation="10dp"
            android:text="@string/use_camera" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/usePicBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableRight="@android:drawable/ic_menu_gallery"
            android:padding="40dp"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_border"
            android:elevation="10dp"
            android:text="@string/choose_picture" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/settingsBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableRight="@android:drawable/ic_menu_preferences"
            android:padding="40dp"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_border"
            android:elevation="10dp"
            android:text="@string/settings" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>